# NTP-client

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  readme.md  vcpkg.json
include/: INtpClient.hpp  ntp_client.hpp  ntp_client_api.hpp
src/: ntp_client.cpp
test/: CMakeLists.txt  mock_ntp_client.hpp  test_ntp_client.cpp
